--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    What else did you expect?
+		    Click the screen to redraw
 	    </footer>
 	</body>
 </html>
